--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "mockjs": "^1.0.1-beta3",
     "vant": "^2.0.7",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.3",
